@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class Employee{
    -name : String
    -birthdate : Date
    -email : String
    -phoneNumber : int
    -admission date : Date
    -taxpayerNumber : String
    -address : String
    -docNumber : String
    -jobTitle : String
    -skills : List<Skill>
}


class AddEntryToDoListController{

}

class AddEntryToDoListUI{

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository(): employeeRepository
    + getGreenSpaceRepository(): greenSpacesRepository
}
class EmployeeRepository{


+getEmployee(): Employee

}
class GreenSpacesRepository{
+getGreenSpaces(): GreenSpace
}

class Task{
    -title: String
    -description: String
    -date: Date
    -taskStartPeriod: TaskPeriod
    taskExpectedDuration: int
    type: String
    greenSpace: GreenSpace
    urgency: TaskUrgency
    status: TaskStatus
    assignedTeam: Team
    assignedVehicles: List<Vehicle>
    startDate: Date
    taskPosition: TaskPosition
}

enum TaskUrgency {
    LOW
    MEDIUM
    HIGH
}


AddEntryToDoListUI .>AddEntryToDoListController

AddEntryToDoListController .> "1" Repositories

Repositories "1" --> "1" Repositories : getInstance()
Repositories "1" --> "1" EmployeeRepository

Repositories "1" --> "1" GreenSpacesRepository

AddEntryToDoListController ..>Employee

EmployeeRepository "1" --> "1" Employee
GreenSpacesRepository "1" --> "1" Employee

Employee .> TaskUrgency
Employee --> Task: registers



@enduml